src/test/deca/context/invalid/ContextSansObjet/OperationsUnaires/MinusString.deca
//Description:
//  Vérification contextuelle de l'opérateur unaire - sur le type string
//
//Résultat:
//  Erreur contextuelle
//  ligne 8 : unaryMinus est applicable sur les types numériques
{
    -"Hello";
}